# esp32-projects

./: .gitignore
birthdays/: CMakeLists.txt  Makefile
birthdays/apps_script/: code.gs
birthdays/main/: CMakeLists.txt  base64.h  button.c  button.h  common.h  console_log.h  datetime.c  datetime.h  font_tahoma_8pt.c  fonts.c  fonts.h  gui.c  gui.h  https.c  https.h  i2c.c  i2c.h  main.c  oled.c  oled.h  wifi.h
temp_sensor/: CMakeLists.txt
temp_sensor/main/: CMakeLists.txt  adc.c  adc.h  common.h  datetime.c  https.c  https.h  main.c  storage.h  wifi.c
temp_sensor_ads/: Makefile
temp_sensor_ads/main/: CMakeLists.txt  adc.c  ads1115.c  ads1115.h  base64.c  common.h  https.c  i2c_support.c  i2c_support.h  main.c
template/: sdkconfig.defaults
template/main/: CMakeLists.txt  common.h  main.c  storage.c  wifi.c
