idf_component_register(
                    SRCS 
                        "main.c"
                        "storage.c"
                        "datetime.c"
                        "base64.c"
                        "wifi.c"
                        "https.c"
                        "i2c.c"
                        "font_glcd_5x7.c"
                        "font_tahoma_8pt.c"
                        "fonts.c"
                        "oled.c"
                        "button.c"
                        "gui.c"

                    INCLUDE_DIRS
                        "."
                    )
