idf_component_register(
                    SRCS 
                        "main.c"
                        "storage.c"
                        "datetime.c"
                        "base64.c"
                        "wifi.c"
                        "https.c"
                        "adc.c"
                        "i2c_support.c"
                        "ads1115.c"

                    INCLUDE_DIRS
                        "."
                    )
